--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div id="container">
 
 		<div class="header">
-				<img src="Images/profile-picture.png" alt="Judith photo" id="photo">
+				<img src="Images/profile-picture.png" alt="judith photo" id="photo">
 				<h1> Judith Feldman </h1>
 				<h2 id="titre1"> Responsable Influence & Relations Presse </h2>
 					<p> Alternante au sein de la société Firstgen, je suis responsable du marketing d'influence, du développement de la communication et de l'image d'artistes musicaux, ainsi que de la relation avec la presse et les médias.</p>
@@ -31,32 +31,30 @@
 			
 			<div class="card">				
 				<h3 class="Titre"> COMPÉTENCES </h3>
-					<p>
-						<ul>
-							<h4 class="catégories"> LANGUES </h4>
-								<ul>
-									<li> Français </li>
-									<li> Anglais </li>
-									<li> Espagnol </li>					
-								</ul>
-							<h4 class="catégories"> PACK OFFICE </h4>
-								<ul>
-									<li> Word </li>
-									<li> Powerpoint </li>
-									<li> Excel </li>
-								</ul>
-							<h4 class="catégories"> INTERFACES UX </h4>			<ul>
-									<li> Figma </li>
-									<li> In Vision </li>
-								</ul>
-							<h4 class="catégories"> PLATEFORMES </h4>
-								<ul>
-									<li> Hybris </li>
-									<li> MailJet </li>						<li> Fluent </li>
-								</ul>
+				<ul>
+					<h4 class="categories"> LANGUES </h4>
+						<ul class="card-categ">
+							<li> Français </li>									<li> Anglais </li>
+							<li> Espagnol </li>					
 						</ul>
-					</p>
-
+					<h4 class="categories"> PACK OFFICE </h4>
+						<ul class="card-categ">								
+							<li> Word </li>
+							<li> Powerpoint </li>
+							<li> Excel </li>
+						</ul>
+					<h4 class="categories"> INTERFACES UX </h4>				
+						<ul class="card-categ" id="special">
+							<li> Figma </li>
+							<li> In Vision </li>
+						</ul>
+					<h4 class="categories"> PLATEFORMES </h4>
+						<ul class="card-categ">
+							<li> Hybris </li>
+							<li> MailJet </li>						
+							<li> Fluent </li>
+						</ul>
+				</ul>
 			</div>
 
 			<div class="card">			
